# SolidPrep

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE.md  README.md  build_debug.sh  build_release.sh  metadata.json  setup.py  square.scad
cmake/: FindMUMPS.cmake  FindSCALAPACK.cmake
elements/: Dinv.py  GT9.py  Q4.py  Q4S.py  README.md  TET4.py  TRI3.py  TRI4.py  TRI6.py
examples/: 3point.json  cantilever.json  shapeL.json  shapeX.json  square.step
examples/v0.1.1/: 3point.json  cantilever.json  shapeL.json
examples/v0.1.2/: L.step  cantilever.json  shapeL.json  shapeX.json
examples/v0.2.0/: abutment_top_natural.stp  cantilever3d.json  implant.json  mandible_cut_side01.step  mandible_cut_side02.step  points1.txt  points1_inner.txt  points2.txt  points2_inner.txt  prism.step  rbm_p1.txt  rbm_p2.txt
include/: beam_graph.hpp  beam_meshing.hpp  cross_section.hpp  curvature.hpp  density_filter.hpp  element.hpp  element_common.hpp  element_factory.hpp  field.hpp  finite_element.hpp  force.hpp  function.hpp  geometry.hpp  global_stiffness_matrix.hpp  ground_structure.hpp  internal_force.hpp  internal_loads.hpp  logger.hpp  material.hpp  meshing.hpp  multimaterial.hpp  nonlinear_solver.hpp  optimizer.hpp  pathfinding.hpp  project_data.hpp  projection.hpp  shape_handler.hpp  shape_operations.hpp  simulation.hpp  sizing.hpp  solver_manager.hpp  spring.hpp  sub_problem.hpp  support.hpp  topology_optimization.hpp  utils.hpp  view_handler.hpp  visualization.hpp
include/boundary_element/: BQ4.hpp  BTRI3.hpp  BTRI6.hpp
include/contact_element/: CTRI3.hpp
include/density_filter/: averaging.hpp  convolution.hpp  helmholtz.hpp
include/element/: GT9.hpp  H8.hpp  Q4.hpp  Q4S.hpp  TET10.hpp  TET4.hpp  TRI3.hpp  TRI4.hpp  TRI6.hpp  beam_linear_2D.hpp
include/field/: apparent_density.hpp  implant_region.hpp  minimum_energy_orientation.hpp  orthotropic_flow.hpp  principal_stress.hpp  trabecular_cutoff.hpp
include/finite_element/: PCG.hpp  cusolver.hpp  cusolver_impl.hpp  direct_solver.hpp  eigen_pcg.hpp  gradient_descent.hpp  mumps_solver.hpp  petsc_pcg.hpp
include/function/: am_support.hpp  compliance.hpp  global_stress_heaviside.hpp  global_stress_pnorm.hpp  global_stress_pnorm_normalized.hpp  mass.hpp  mass_first_material.hpp  mechanostat.hpp  omni_machining.hpp  (+4 more)
scripts/: D_rot.py  FreeCAD_get_vertices.py  FreeCAD_get_vertices_spline.py  make_inner_region.py  make_inner_region_ordered_convex.py  scale_points_around_x.py
src/: CMakeLists.txt  beam_graph.cpp  cross_section.cpp  curvature.cpp  element.cpp  finite_element.cpp  force.cpp  geometry.cpp  global_stiffness_matrix.cpp  ground_structure.cpp  internal_force.cpp  internal_loads.cpp  main.cpp  material.cpp  meshing.cpp  multimaterial.cpp  optimizer.cpp  project_data.cpp  projection.cpp  shape_handler.cpp  shape_operations.cpp  solver_manager.cpp  spring.cpp  support.cpp  utils.cpp  view_handler.cpp  visualization.cpp
src/boundary_element/: BQ4.cpp  BTRI3.cpp  BTRI6.cpp  CMakeLists.txt
src/contact_element/: CMakeLists.txt  CTRI3.cpp
src/density_filter/: CMakeLists.txt  averaging.cpp  convolution.cpp  helmholtz.cpp
src/element/: CMakeLists.txt  GT9.cpp  H8.cpp  Q4.cpp  Q4S.cpp  TET10.cpp  TET4.cpp  TRI3.cpp  TRI4.cpp  TRI6.cpp  beam_linear_2D.cpp
src/field/: CMakeLists.txt  apparent_density.cpp  implant_region.cpp  minimum_energy_orientation.cpp  orthotropic_flow.cpp  principal_stress.cpp  trabecular_cutoff.cpp
src/finite_element/: CMakeLists.txt  PCG.cpp  cusolver.cpp  cusolver_impl.cpp  direct_solver.cpp  eigen_pcg.cpp  gradient_descent.cpp  mumps_solver.cpp  petsc_pcg.cpp
src/function/: CMakeLists.txt  am_support.cpp  compliance.cpp  global_stress_heaviside.cpp  global_stress_pnorm.cpp  global_stress_pnorm_normalized.cpp  mass.cpp  mass_first_material.cpp  mechanostat.cpp  multi_axis_machining.cpp  old-omni_machining.cpp  omni_machining.cpp  radial_machining.cpp  volume.cpp
src/function/density_based/: CMakeLists.txt  am_support.cpp  compliance.cpp  global_stress_heaviside.cpp  global_stress_pnorm.cpp  global_stress_pnorm_normalized.cpp  mass.cpp  mass_first_material.cpp  mechanostat.cpp  old-omni_machining.cpp  omni_machining.cpp  volume.cpp
src/function/node_shape_based/: CMakeLists.txt  compliance.cpp  global_stress_heaviside.cpp  mechanostat.cpp  volume.cpp
src/general_global_matrix/: CMakeLists.txt  petsc_global_sparse.cpp
src/general_solver/: CMakeLists.txt  mumps_general.cpp  petsc_general_pcg.cpp
src/global_stiffness_matrix/: CMakeLists.txt  cusolver_sparse_symmetric.cpp  eigen_sparse_asymmetric.cpp  eigen_sparse_symmetric.cpp  lapack_dense_symmetric_banded.cpp  mumps_sparse_symmetric.cpp  petsc_sparse_symmetric.cpp
src/material/: CMakeLists.txt  bone.cpp  linear_elastic_isotropic.cpp  linear_elastic_orthotropic.cpp  linear_elastic_orthotropic_field.cpp  mandible.cpp  power_law_isotropic.cpp  power_law_orthotropic.cpp
src/math/: CMakeLists.txt  matrix.cpp  vector_view.cpp
src/meshing/: CMakeLists.txt  gmsh.cpp  mesh_file.cpp  standard_beam_mesher.cpp
src/nonlinear_solver/: CMakeLists.txt  mma.cpp  newton.cpp  steepest_descent.cpp
src/optimization/: CMakeLists.txt  GCMMASolver.cpp  MMASolver.cpp
src/optimizer/: CMakeLists.txt  mma.cpp  newton.cpp
src/optimizer/density_based/: CMakeLists.txt  mma.cpp  newton.cpp
src/optimizer/node_shape_based/: CMakeLists.txt  mma.cpp
src/pathfinding/: CMakeLists.txt  meshless_astar.cpp  visibility_graph.cpp
src/project_specification/: CMakeLists.txt  data_map.cpp
src/projection/: CMakeLists.txt  heaviside.cpp  none.cpp  threshold.cpp
src/shape_element/: CMakeLists.txt  STRI3.cpp
src/simulation/: CMakeLists.txt  marginal_bone_loss.cpp
src/sizing/: CMakeLists.txt  beam_sizing.cpp  standard_sizing.cpp
src/topology_optimization/: CMakeLists.txt  compliance_constraint_simple.cpp  minimal_compliance.cpp  minimal_volume.cpp
src/utils/: CMakeLists.txt  D_operations.cpp  LIN3B.cpp  basis_tensor.cpp  csr.cpp  sparse_matrix.cpp
test/: CMakeLists.txt  main.cpp  matrix.cpp  matrix_transpose.cpp  vector.cpp
(+78 files in other folders)
